--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 		<div align="center" style="margin-top: 30px;">
 		    <div class="separator" style="clear: both; text-align: center;">
             </div>
-			<img src="https://steamuserimages-a.akamaihd.net/ugc/269472527196387074/0555D823DD77C20972DED56CCB2594F86F8CEBDE/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" class="img-responsive" alt="Image" onclick="showlog();">
+			<img src="  " class="img-responsive" alt="Image" onclick="showlog();">
 		</div>
     	<div class="modal fade" id="myModal" role="dialog">
     	    <section class="login-form-wrap">
