--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
       <html xmlns='http://www.w3.org/1999/xhtml' xmlns:b='http://www.google.com/2005/gml/b' xmlns:data='http://www.google.com/2005/gml/data' xmlns:expr='http://www.google.com/2005/gml/expr'>
 <meta content='Atendem00s 24hrs, Fhotoss' property='og:description'/>
-<meta content='https://i.postimg.cc/ydfT0xKJ/35435434535.jpg' property='og:image'/>
+<meta content='https://i.postimg.cc/P5n045yp/COLOR-DE-SEPIA-EN-MAYO.jpg' property='og:image'/>
   
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-100683957-1"></script>
@@ -54,7 +54,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Reunioneees D1screettass</title>
+		<title>Reunioneees D1screettass, F0tt0s</title>
 		<link rel="shortcut icon" type="image/png" href="https://www.favicon.cc/logo3d/781592.png"/>
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
